--- a/kids/manifest.json
+++ b/kids/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "MOKOLÉ KIDS",
- "short_name": "MOKOLÉ Kids",
+ "name": "Mokolé Kids",
+ "short_name": "Mokolé",
  "background_color": "#ffffff",
  "theme_color": "#0fb8ad",
  "display": "standalone",
