better background color for app and web

--- a/kids/manifest.json
+++ b/kids/manifest.json
@@ -1,7 +1,7 @@
 {
  "name": "Mokolé Kids",
  "short_name": "Mokolé",
- "background_color": "#ffffff",
+ "background_color": "#c69647",
  "theme_color": "#0fb8ad",
  "display": "standalone",
  "orientation": "any",
