dice removed when color is locked, reset button

--- a/qwixx/manifest.json
+++ b/qwixx/manifest.json
@@ -1,9 +1,9 @@
 {
- "name": "Qwixx Scorer",
+ "name": "Qwixx Interactive Score Sheet",
  "short_name": "Qwixx Scorer",
  "display": "standalone",
  "orientation": "landscape",
- "start_url": "/qwixx/scorer.html",
+ "start_url": "/qwixx/index.html",
  "icons": [
  ]
 }
