--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
  "background_color": "#FFFFFF",
  "theme_color": "#000000",
  "display": "standalone",
- "orientation": "portrait",
+ "orientation": "any",
  "start_url": "/?utm_source=homescreen",
  "icons": [
   {
